--- a/src/app/components/profile/profile.component.html
+++ b/src/app/components/profile/profile.component.html
@@ -1,7 +1,4 @@
-<mat-sidenav-container class="example-container" *ngIf="shouldRun">
-    <mat-sidenav mode="side" opened>Sidenav content</mat-sidenav>
-    <mat-sidenav-content>Main content</mat-sidenav-content>
-  </mat-sidenav-container>
-  
-  <div *ngIf="!shouldRun">Please open on Stackblitz to see result</div>
-  
+<mat-drawer-container class="example-container">
+    <mat-drawer mode="side" opened>Your Liked Articles</mat-drawer>
+    <mat-drawer-content>Most Liked Articles</mat-drawer-content>
+  </mat-drawer-container>
