--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -1,8 +1,9 @@
 .example-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: #eee;
+    width: 100%;
+    height: 600px;
+    margin: 10px;
+    border: 1px solid #555;
+  }
+  mat-drawer {
+      width:350px;
   }
